allow use of #RRGGBB colours, and adding variety of configuration quality of life features for better gui creation.